# imperial-math-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.idx/: dev.nix
notebooks/: 01_mgs_visualization.ipynb  02_pagerank_visualization.ipynb
src/linalg/: orthonormalization.py  pagerank.py  special_matrices.py
src/nn/: network.py
tests/linalg/: test_orthonormalization.py  test_pagerank.py
tests/nn/: test_network.py
