[project]
name = "imperial-math-ml"
version = "0.1.0"
description = "Mathematical Foundations for ML: A portfolio implementing Imperial ReCoDE standards for reproducible research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "ruff>=0.1.0",
    "ipykernel==6.29.5",
    "jupyter-client==8.6.2",
    "pyzmq==26.0.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pip>=26.0.1",
]
